fixed hopefully whitespace removed

--- a/portfolio.css
+++ b/portfolio.css
@@ -173,7 +173,6 @@ pre.prettyprint {
 	height: 300px;
 	overflow-y: auto;
 	overflow-x: auto;
-	white-space: nowrap;
 	text-overflow: clip;
 }
 
@@ -256,7 +255,6 @@ video.prev{
 		height: 300px;
 		overflow-y: auto;
 		overflow-x: auto;
-		white-space: nowrap;
 		text-overflow: clip;
 	}
 
